--- a/bookdownproj.Rmd
+++ b/bookdownproj.Rmd
@@ -1,3 +1,190 @@
+---
+title: |
+  AFLEARN 
+  Introduction to R using ICAN-ICAR 2025 Survey Data
+author: 'Siphiwe M. Bogatsu'
+date: 'February 2026'
+site: bookdown::bookdown_site
+
+---
+
+```{r, setup1, include=FALSE}
+knitr::opts_chunk$set(
+  warnings = FALSE,
+  fig.path = 'figs/', 
+  message = F
+)
+
+library(knitr)
+library(cowplot) #Gives more control for figures
+```
+
+# Introduction
+
+```{js, echo = FALSE}
+title=document.getElementById('header');
+title.innerHTML = '<img src="files/20260205-df-header.png" alt="">' + title.innerHTML
+```
+
+
+<!--chapter:end:index.Rmd-->
+
+# Survey Design, Sampling, and Weighting
+
+Household surveys such as PAL Network’s ICAN-ICAR study estimate population learning outcomes from a sample. The sampling design determines *which* households enter the data, and the survey design variables (weights, strata, and clusters) determine *how* analysts should estimate population quantities and uncertainty. After this chapter, you should be able to explain probability sampling, describe the ICAN-ICAR multi-stage design, interpret a survey weight, and compute design-correct estimates in R.
+
+```{r}
+
+#| echo: true
+#| warning: false
+#| message: false
+
+library(tidyverse)
+library(survey)
+library(knitr)
+
+# load the data
+dat = read_csv("data/2025_PAL_ICAN-ICAR_data.csv", show_col_types = FALSE)
+
+```
+
+## Survey sampling and design
+
+A census measures every household in the population. ICAN-ICAR survey data instead uses a probability sample because a census is rarely feasible at national scale. Probability sampling supports population inference because the design assigns each unit a known (or estimable) selection probability.
+
+ICAN-ICAR survey data uses a stratified, multi-stage cluster design.@fig-pal-sampling-process illustrates the logic.
+
+```{r}
+#| label: fig-pal-sampling-process
+#| echo: false
+#| fig-cap: "Illustration of the ICAN-ICAR multi-stage sampling process."
+#| out-width: "100%"
+
+knitr::include_graphics("figs/samplingdesignchart2.png")
+```
+
+**Stage 1 (select clusters).** The survey defines primary sampling units (PSUs) such as enumeration areas, villages, or urban blocks. Within strata (for example, region-by-urban/rural categories), the design selects PSUs using probability proportional to size (PPS) so that larger PSUs have a higher chance of selection.
+
+**Stage 2 (select households).** Within each selected PSU, the field team selects a fixed number of households using a standardized selection procedure (for example, systematic selection from a listing). This second stage produces the household sample used for data collection.
+
+This design shapes analysis in two ways. First, learners within the same PSU tend to resemble one another, which increases uncertainty relative to a simple random sample of the same size. Second, stratification often improves precision because the sample covers key sub-populations more evenly.
+
+## Survey weights and design-based inference
+
+A survey weight approximates how many population units a sampled unit represents. In its simplest form, the design weight equals the inverse of the selection probability. If a household had a 1 in 500 chance of selection, its basic weight would be 500. In other words, that household represents 500 households in the population.The ICAN-ICAR survey data includes a household weight variable, `HH_Weight_Provided`, which can be used for population estimate.
+
+To compensate for households that were selected but did not respond (or were missed), the weights are adjusted so that responding households “stand in” for similar households that did not respond. This may also involve post-stratification — adjusting weights so
+that certain known totals (e.g. population by region, or by urban/rural) align with census figures. These adjustments reduce bias from non-response and any sampling frame imperfections.
+
+
+Ignoring survey weights or clustering can make your analysis misrepresent both the population estimate and its uncertainty. If selection probabilities vary, unweighted summaries describe the sample rather than the population, whereas weighting targets the population by rebalancing each observation's contribution. Clustering also induces correlation within PSUs, thus treating the data as a random sample typically understates standard errors and produces confidence intervals that are too narrow. Survey-aware methods incorporates the design to estimate uncertainty correctly.
+
+The `svydesign()` from the `survey` package represents the sampling design through a design object. After you create that object, you pass it to survey-aware estimators such as `svymean()` and `svyglm()`. In multi-country analysis, cluster and strata identifiers can repeat across countries. The safest approach is to use `interaction()` so that identifiers become unique across the pooled data.
+
+```{r}
+#| eval: false
+
+options(
+  survey.lonely.psu = "adjust",
+  survey.adjust.domain.lonely = TRUE
+)
+
+des = svydesign(
+  ids     = ~interaction(CountryName, VillageID) + HHID,
+  strata  = ~interaction(CountryName, Tier_One_Unit),
+  weights = ~HH_Weight_Provided,
+  data    = dat,
+  nest    = TRUE
+)
+```
+
+Let's break down each component:
+
+**1. `ids = ~interaction(CountryName, VillageID) + HHID`**
+
+This specifies the **two-stage cluster structure**:
+
+-   **Stage 1:** EAs/Villages (identified uniquely by `interaction(CountryName, VillageID)`)
+-   **Stage 2:** Households within EAs (identified by `HHID`)
+
+We use `interaction()` to create unique EA identifiers across countries, since the same `VillageID` might exist in multiple countries. The `+` indicates nested stages (households within EAs)
+
+**2. `strata = ~interaction(CountryName, Tier_One_Unit)`**
+
+Stratification variables are the geographic regions within each country. `Tier_One_Unit` represents the first-level administrative division (provinces, districts, etc.). We interact this with `CountryName` to treat each country as its own separate stratification system. This ensures that sampling variability is calculated correctly within each country's design
+
+**3. `weights = ~HH_Weight_Provided`**
+
+This is the final household weight variable provided in the data. Already incorporates all necessary adjustments (selection probabilities, non-response, post-stratification)
+
+**4. `nest = TRUE`**
+
+This is essential when cluster IDs are only unique within strata. It tells R that `VillageID` values can repeat across different strata/countries, and prevents R from treating EAs with the same ID in different countries as the same cluster.
+
+The example below compares an unweighted and weighted estimate of the proportion of enrolled learners who meet minimum proficiency in both maths and reading in Senegal.
+
+```{r}
+#| label: compare weighted and unweighted
+#| warning: false
+#| message: false
+
+# filter to enrolled learners in Senegal
+one_country = dat |>
+  filter(CountryName == "Senegal" & enr_status == "Currently Enrolled")
+
+# unweighted (sample) estimate
+prop_unweighted = mean(one_country$MPL_both, na.rm = TRUE)
+prop_unweighted
+```
+
+
+```{r}
+
+# weighted estimate with design-correct SE
+options(
+  survey.lonely.psu = "adjust",
+  survey.adjust.domain.lonely = TRUE
+)
+
+des_one = svydesign(
+  ids     = ~interaction(CountryName, VillageID) + HHID,
+  strata  = ~interaction(CountryName, Tier_One_Unit),
+  weights = ~HH_Weight_Provided,
+  data    = one_country,
+  nest    = TRUE
+)
+
+
+prop_weighted = svymean(~MPL_both, design = des_one, na.rm = TRUE)
+prop_weighted
+```
+
+@fig-pal-analysis-workflow summarizes a practical workflow that you can reuse for descriptive statistics and modelling.
+
+```{r}
+#| label: fig-pal-analysis-workflow
+#| echo: false
+#| fig-cap: "A practical workflow for analysing ICAN-ICAR survey data in R."
+#| out-width: "85%"
+
+knitr::include_graphics("figs/analysisflow_pal.png")
+```
+
+After you define `des`, these are the common *survey-aware* functions:
+
+-   `svymean()` for weighted means and proportions,
+-   `svytotal()` for weighted totals,
+-   `svyby()` for subgroup estimates, and
+-   `svyglm()` for regression models with design-correct standard errors.
+
+## Practice exercises
+
+1.  Change the country filter in the example and compare unweighted and weighted MPL estimates.
+2.  Estimate the weighted proportion meeting MPL in maths (`MPL_math`) and compare it with the unweighted proportion.
+3.  Within one country, use `svyby()` to estimate MPL by `Location` (urban/rural) for enrolled learners.
+
+<!--chapter:end:01-survey-design-sampling-weighting.Rmd-->
+
 # Understanding distributions
 
 Large survey datasets contain many variables and many observations. To learn from such data, you need tools that summarise patterns clearly and accurately. This chapter introduces distributions—the way a variable’s values are spread across the sample—and shows how to describe distributions using tables, summary statistics, and simple plots. Because the ICAN-ICAR data come from a complex survey, we also show how to produce weighted summaries that reflect the target population.
@@ -250,19 +437,6 @@ To produce a weighted household-level distribution, subset the survey design to 
 #| label: weighted-household-roof
 #| eval: false
 
-options(
-  survey.lonely.psu = "adjust",
-  survey.adjust.domain.lonely = TRUE
-)
-
-des_child_all = svydesign(
-  ids     = ~interaction(CountryName, VillageID) + HHID,
-  strata  = ~interaction(CountryName, Tier_One_Unit),
-  weights = ~HH_Weight_Provided,
-  data    = dat,
-  nest    = TRUE
-)
-
 des_household = subset(des_child_all, hh_first)
 
 roof_w = svytable(~hh07a, des_household)
@@ -334,4 +508,13 @@ Use the ICAN-ICAR data and the tools in this chapter to answer the questions bel
 3. Create an age group variable (for example, `<= 10` vs `> 10`). What share of learners falls in each age group?
 4. Produce a weighted frequency table for `Location` within one country of your choice.
 5. Investigate missingness in `ch06a` by `residence` and by `sex`. Report the results as unweighted and weighted proportions.
+
+```{r}
+#| label: exercises-template
+#| eval: false
+
+# Example template: weighted rural proportion
+svymean(~I(Location == "Rural"), des_child_all, na.rm = TRUE)
+
+<!--chapter:end:02-understanding-distributions.Rmd-->
 
